# Tail

TailApp/: CMakeLists.txt
TailApp/TailApp/: CMakeLists.txt  main.cpp  qml.qrc
TailApp/TailApp/UI/: main.qml  main.qml.autosave  qml.qrc
TailApp/TailApp/UI/Defines/: HeightScheme.qml
TailApp/TailApp/UI/Screen/: HomeScreen.qml  HomeScreen.qml.autosave  SplashScreen.qml
TailApp/TailComponents/: CMakeLists.txt  loginscreen.cpp  loginscreen.h
